Fix App-screen height on mobile when ContactForm is open

--- a/src/components/main/App.css
+++ b/src/components/main/App.css
@@ -75,7 +75,4 @@
     margin: auto;
     width: 90%;
   }
-  .App-screen {
-    height: unset;
-  }
 }
